[gd_scene load_steps=5 format=3 uid="uid://dubgf5h8qhh4"]

[ext_resource type="Script" uid="uid://dowgnmnsdx55m" path="res://Objects/ladder_door.gd" id="1_wfxkc"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_l3616"]
radius = 5.0
height = 58.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_mk3a1"]
radius = 14.0
height = 64.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nhmqr"]
size = Vector2(62, 64)

[node name="LadderDoor" type="StaticBody2D"]
script = ExtResource("1_wfxkc")

[node name="ExitArea2D" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExitArea2D"]
position = Vector2(0, -32)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_l3616")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -32)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_mk3a1")

[node name="ActivateDoorArea2D" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActivateDoorArea2D"]
position = Vector2(0, -1)
rotation = 1.5708
shape = SubResource("RectangleShape2D_nhmqr")
debug_color = Color(0.687498, 0.499544, 1.92523e-07, 0.42)

[connection signal="body_entered" from="ExitArea2D" to="." method="_on_exit_area_entered"]
[connection signal="body_entered" from="ActivateDoorArea2D" to="." method="_on_activate_door_area_entered"]
[connection signal="body_exited" from="ActivateDoorArea2D" to="." method="_on_activate_door_body_exited"]
